FIX: body overflow

--- a/docsite/index.css
+++ b/docsite/index.css
@@ -1490,6 +1490,7 @@ input[type="range"] {
 }
 
 #npm > pre, #cli > pre {
+  max-inline-size: var(--max-inline-body);
   margin: 0;
 }
 
